# fontforge

./: .gitignore  .mcp.json  CLAUDE.md  TODOS.md  fonts  pyproject.toml  requirements-dev.txt  requirements.txt  sessions.sh
.claude/: settings.json  settings.local.json
.claude/skills/: serena
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  gotchas.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/pipeline/: order.md
.serena/memories/scripts/: imports.md
docs/guides/: bitmap-strikes-guide.md  font-names-guide.md  quickstart.md  user-manual.md
docs/references/: changes.md  font-names-api.md  implementation-notes.md  strikes-api.md
docs/references/screens/: 08c8f03e-c303-47cf-8792-7470bf93e7ff.avif  19df6892-5dbf-4ae6-8343-57d93867349d.avif
docs/reviews/: 2026-04-18-code-review.md
docs/sessions/: tasks.md
docs/sessions/prompts/: important.md  tightening.md
docs/superpowers/plans/: 2026-03-22-fontforge-consolidation.md
docs/superpowers/specs/: 2026-03-22-fontforge-consolidation-design.md
fonts/Burbank/: metrics.jsonc
fonts/Burbank/_/: BurbankText-Regular.sfd  BurbankText.ttc
fonts/Burbank/kerning/: BurbankText-Black.csv  BurbankText-BlackItalic.csv  BurbankText-Bold.csv  BurbankText-BoldItalic.csv  BurbankText-Light.csv  BurbankText-Regular.csv  BurbankText-RegularItalic.csv
fonts/EggRoll/: EggRoll-1.sfd  EggRoll-2.sfd  EggRoll-3.sfd  EggRoll-4.sfd  EggRoll-5.sfd  EggRoll-6.sfd  Sukoro  Sukoro.sfd  Sukoro.ttc
fonts/Emojitwo/: .placeholder
fonts/GoogleSans/: GoogleSans18pt-Regular.0ttf  GoogleSans18pt-Regular.1ttf  GoogleSans18pt-Regular.sfd  GoogleSans18pt-Regular.sfd-01
fonts/Monofonto/: Monofonto-Regular.sfd
fonts/PPLX/: PPLXMonoBetav0VF.sfd  PPLXSans-RegularBeta-v2.sfd  PPLXSansBetav0VF.sfd  PPLXSerifBetav0VF.sfd
fonts/TTText/: TTText-Bold.sfd  TTText-Bold.ttc  TTText-Medium.sfd  TTText-Medium.ttc  TTText-Regular.sfd  TTText-Regular.ttc
fonts/Tests/: NewFamilyNameStyleName.sfd  PPNeueMachina-InktUltraB.ttc
fonts/iASans/: iASans-Text.sfd  iASans-Text.ttc
mcp-server/: server.py
scripts/: baseline.py  batch.py  build.py  hint.py  kern.py  metrics.py  rename.py  strikes.py  variable.py
tests/: conftest.py  test_build.py  test_integration.py  test_kern.py  test_mcp_server.py  test_metrics.py  test_rename.py
tests/fixtures/: README.md
